--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -4,6 +4,9 @@ on:
   schedule:
     - cron: '*/5 * * * *' # At 00:00 on Monday
 
+permissions:
+  contents: write
+  
 jobs:
   build:
     runs-on: ubuntu-latest
