--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,7 +2,7 @@ name: run main.py
 
 on:
   schedule:
-    - cron: '*/5 * * * *' # At 00:00 on Monday
+    - cron: '*/5 * * * *' # Every 5 minutes
 
 permissions:
   contents: write
@@ -13,19 +13,19 @@ jobs:
     steps:
 
       - name: checkout repo content
-        uses: actions/checkout@v2 # checkout the repository content to github runner
+        uses: actions/checkout@v2
 
       - name: setup python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.9' # install the python version needed
+          python-version: '3.9'
           
       - name: install python packages
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           
-      - name: execute py script # run main.py
+      - name: execute py script
         env:
           SOME_SECRET: ${{ secrets.SOME_SECRET }}
         run: python main.py
@@ -35,10 +35,10 @@ jobs:
           git config --local user.email "sankkara0811narayanan@gmail.com"
           git config --local user.name "SANKKARANARAYANAN"
           git add -A
-          git diff-index --quiet HEAD || (git commit -a -m "updated logs" --allow-empty)
+          git diff-index --quiet HEAD || git commit -m "updated logs"
           
       - name: push changes
         uses: ad-m/github-push-action@v0.6.0
         with:
-          github_token: ${{ secrets.ACTION_TOKEN }}
-          branch: main 
+          github_token: ${{ secrets.ACTION_TOKEN }} # PAT secret
+          branch: main
